# krabby

./: .gitignore  Cargo.toml  LICENSE  README.md  the_plan.md
.github/workflows/: ci.yml  release.yml
assets/: krabby.desktop
src/: error.rs  lib.rs  main.rs  tray.rs
src/config/: mod.rs
src/docker/: client.rs  mod.rs  models.rs
src/export/: compose.rs  csv.rs  json.rs  mod.rs
src/ui/: app.rs  mod.rs  theme.rs  widgets.rs
